tung nt add css from

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -16,7 +16,7 @@
     "Bảng giá" : "Pricing",
     "Đăng nhập" : "Login",
     "Dùng thử" : "Trial",
-    "Click here for details" : "Xem Chi Tiết",
+    "Nhấn vào đây để xem chi tiết" : "Click here for details",
     "Dùng thử miễn phí" : "Free Trial",
     "Tìm hiểu thêm" : "Read more",
     "Về chúng tôi" : "About Us",
