tung nt add css from

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,6 +7,7 @@
     "Liên hệ" : "Contact Us",
     "Sản phẩm" : "Product",
     "Giải pháp" : "Solution",
+    "Xem thêm" : "Read more",
     "Đối tác" : "Partner",
     "Đại lý" : "Agent",
     "Hỗ trợ" : "Supports",
