tung nt add css from

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -8,6 +8,9 @@
     "Sản phẩm" : "Product",
     "Giải pháp" : "Solution",
     "Xem thêm" : "Read more",
+    "Khách Hàng" : "Happy Clients",
+    "Nhận xét của" : "Testimonials From Our",
+    "Tiết kiệm năng lượng hệ thống DHKK của RiCS" :  "Energy Saving Air Conditioning System RiCS",
     "Đối tác" : "Partner",
     "Đại lý" : "Agent",
     "Hỗ trợ" : "Supports",
