--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,40 +1,40 @@
 {
-    "Giới thiệu" : "About Us",
-    "TPCloud" : "TPCloud",
-    "Tin tức" : "Blog",
-    "Công nghệ của chúng tôi" : "Our Technology",
-    "Liên hệ chúng tôi" : "Contact Us",
-    "Liên hệ" : "Contact Us",
-    "Sản phẩm" : "Product",
-    "Giải pháp" : "Solution",
-    "Xem thêm" : "Read more",
-    "Khách Hàng" : "Happy Clients",
-    "Nhận xét của" : "Testimonials From Our",
-    "Tiết kiệm năng lượng hệ thống DHKK của RiCS" :  "Energy Saving Air Conditioning System RiCS",
-    "Đối tác" : "Partner",
-    "Đại lý" : "Agent",
-    "Hỗ trợ" : "Supports",
-    "Trung tâm hỗ trợ" : "Supports Central",
-    "Tổng đài hỗ trợ" : "Supports Central",
-    "FAQ" : "FAQ",
-    "Bảng giá" : "Pricing",
-    "Đăng nhập" : "Login",
-    "Dùng thử" : "Trial",
-    "Nhấn vào đây để xem chi tiết" : "Click here for details",
-    "Dùng thử miễn phí" : "Free Trial",
-    "Tìm hiểu thêm" : "Read more",
-    "Về chúng tôi" : "About Us",
-    "Về TPCLOUD" : "About TPCLOUD",
-    "TPCLOUD COMPANY" : "TPCLOUD COMPANY",
-    "Trụ sở chính" : "Headquarters",
-    "Văn phòng giao dịch" : "Sales Office",
-    "Chi nhánh miền Trung" : "Central Branch",
-    "Chi nhánh miền Bắc" : "North Branch",
-    "Theo dõi chúng tôi" : "Follow Us",
-    "Copyright © TPCOMS Company. All right Reserved. Designed by REIKA" : "Copyright © TPCOMS Company. All right Reserved. Designed by REIKA",
-    "Điều khoản sử dụng" : "Terms",
-    "Chính sách" : "Policy",
-    "Dùng thử ngay" : "Try it",
+    "Giới thiệu": "About Us",
+    "TPCloud": "TPCloud",
+    "Tin tức": "Blog",
+    "Công nghệ của chúng tôi": "Our Technology",
+    "Liên hệ chúng tôi": "Contact Us",
+    "Liên hệ": "Contact Us",
+    "Sản phẩm": "Product",
+    "Giải pháp": "Solution",
+    "Xem thêm": "Read more",
+    "Khách Hàng": "Happy Clients",
+    "Nhận xét của": "Testimonials From Our",
+    "Tiết kiệm năng lượng hệ thống DHKK của RiCS": "Energy Saving Air Conditioning System RiCS",
+    "Đối tác": "Partner",
+    "Đại lý": "Agent",
+    "Hỗ trợ": "Supports",
+    "Trung tâm hỗ trợ": "Supports Central",
+    "Tổng đài hỗ trợ": "Supports Central",
+    "FAQ": "FAQ",
+    "Bảng giá": "Pricing",
+    "Đăng nhập": "Login",
+    "Dùng thử": "Trial",
+    "Nhấn vào đây để xem chi tiết": "Click here for details",
+    "Dùng thử miễn phí": "Free Trial",
+    "Tìm hiểu thêm": "Read more",
+    "Về chúng tôi": "About Us",
+    "Về TPCLOUD": "About TPCLOUD",
+    "TPCLOUD COMPANY": "TPCLOUD COMPANY",
+    "Trụ sở chính": "Headquarters",
+    "Văn phòng giao dịch": "Sales Office",
+    "Chi nhánh miền Trung": "Central Branch",
+    "Chi nhánh miền Bắc": "North Branch",
+    "Theo dõi chúng tôi": "Follow Us",
+    "Copyright © TPCOMS Company. All right Reserved. Designed by REIKA": "Copyright © TPCOMS Company. All right Reserved. Designed by REIKA",
+    "Điều khoản sử dụng": "Terms",
+    "Chính sách": "Policy",
+    "Dùng thử ngay": "Try it",
     "Tùy chỉnh cấu hình": "Configuration",
     "Được chọn nhiều nhất": "Most chosen",
     "Đăng kí dùng thử": "Sign up for a trial",
@@ -47,7 +47,7 @@
     "kĩ thuật": "technique",
     "bán hàng": "sell",
 
-    "Họ và tên":  "Full name",
+    "Họ và tên": "Full name",
     "Tên tổ chức/công ty": "Company",
     "Số điện thoại": "Phone",
     "Ghi chú": "Note",
@@ -62,6 +62,7 @@
     "Vui lòng nhập email": "The email field is required",
     "Vui lòng nhập đúng email": "The email must be a valid email address",
     "Email chỉ nhập tối đa 250 ký tự": "The email may not be greater than 250 characters",
+    "Subject chỉ nhập tối đa 250 ký tự": "Subject may not be greater than 250 characters",
     "Vui lòng nhập số điện thoại": "The phone field is required",
     "Vui lòng nhập điện thoại từ 8 đến 20 chữ số": "The phone must be between 8 and 20 digits",
     "Vui lòng nhập tên tổ chức/công ty": "The company field is required",
