tung nt add css from

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -8,6 +8,7 @@
     "Sản phẩm" : "Product",
     "Giải pháp" : "Solution",
     "Xem thêm" : "Read more",
+    "Vui lòng nhập tiêu đề" : "The subject field is required",
     "Khách Hàng" : "Happy Clients",
     "Nhận xét của" : "Testimonials From Our",
     "Tiết kiệm năng lượng hệ thống DHKK của RiCS" :  "Energy Saving Air Conditioning System RiCS",
